fixed buying assistants and upgrades
fixed buying assistants and upgrades

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
 
     <div>
-      <button type="button" name="buybutton" onclick="buyAssistant()"disabled>Buy Assistant (<span id="assistantCost">500</span>$)</button> x <span id="assistantCount">0</span>
+      <button type="button" id="buyAssistantButton" name="buybutton" onclick="buyAssistant()"disabled>Buy Assistant (<span id="assistantCost">500</span>$)</button> x <span id="assistantCount">0</span>
     </div>
 
 
     <div>
-      <button type="button" name="buybutton" onclick="buyIngredients()"disabled>Buy Cheaper Ingredients (<span id="ingredientsCost">1000</span>$)</button> x <span id="ingredientsCount">0</span>
+      <button type="button" id="buyIngredientsButton" name="buybutton" onclick="buyIngredients()"disabled>Buy Cheaper Ingredients (<span id="ingredientsCost">1000</span>$)</button> x <span id="ingredientsCount">0</span>
     </div>
 
 
