--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 
 
     <div>
-      <button type="button" name="buybutton" onclick="buyflour()"disabled>Buy Cheaper Flour (<span id="flourCost">1500</span>$)</button> x <span id="flourCount">0</span>
+      <button type="button" id="buyFlourButton" name="buybutton" onclick="buyFlour()"disabled>Buy Cheaper Flour (<span id="flourCost">1500</span>$)</button> x <span id="flourCount">0</span>
     </div>
 
 
     <div>
-      <button type="button" name="buybutton" onclick="buySprinkles()"disabled>Buy Prettier Sprinkles (<span id="sprinklesCost">2000</span>$)</button> x <span id="sprinklesCount">0</span>
+      <button type="button" id="buySprinklesButton" name="buybutton" onclick="buySprinkles()"disabled>Buy Prettier Sprinkles (<span id="sprinklesCost">2000</span>$)</button> x <span id="sprinklesCount">0</span>
     </div>
 
 
     <div>
-      <button type="button" name="buybutton" onclick="buyfrosting()"disabled>Buy Tastier Frosting (<span id="frostingCost">2500</span>$)</button> x <span id="frostingCount">0</span>
+      <button type="button" id="buyFrostingButton" name="buybutton" onclick="buyfrosting()"disabled>Buy Tastier Frosting (<span id="frostingCost">2500</span>$)</button> x <span id="frostingCount">0</span>
     </div>
 
     <!--upgrades-->
