--- a/New folder/Index.html
+++ b/New folder/Index.html
@@ -29,7 +29,7 @@
 1/3 cup heavy whipping cream <br>
 4  tablespoons brown sugar <br>
 2  teaspoons vanilla (optional) <br>
-        <em>Icing</em>
+        <em>Icing</em> <br>
 1/2 cup powdered sugar <br>
 1/2  teaspoon cinnamon <br>
 1  tablespoon milk <br>
@@ -42,8 +42,9 @@ In another bowl, mix the pumpkin puree, heavy whipping cream, sugar, and vanilla
 Add the dry ingredients to the wet ingredients. Knead with hands only a bit, until just incorporated. Do not overmix, or the scones will be too tough
 On a lightly floured surface, form the dough into a circle, about 3/4 of an inch thick. Cut the circle into 8 pieces (more or less is fine, just may not cook too well), then place on an ungreased baking sheet, like parchment paper, not touching
 Bake at 425 for about 15 minutes (for me that time was perfect, but maybe not for you), or until light golden brown (pumpkin is quite dark, so you may want to keep an eye on it - not literally)
-You must enjoy!</p>
+You <span id="must">must</span> enjoy!</p>
 
+    <a href="Comments.html" >mooo</a>
 
   </body>
 <html>
